- improve integration between AngularJS and Bootstrap (add ui-bootstrap to project) - fix issues with collapse (extract panel controller) and carousel - extract navigation controller - update version to 0.6 - clean routes - move jumbotron to index template - move ng-cloak attribute to body tag

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -42,3 +42,6 @@ footer p {
 .panel-list {
     margin-top: 2px;
 }
+
+/* AngularJS and Bootstrap integration */
+.nav, .pagination, .carousel, .panel-heading a { cursor: pointer; }
